[project]
name = "robosuite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.3.0",
    "daqp==0.7.1",
    "etils==1.12.2",
    "evdev==1.9.2",
    "exceptiongroup==1.3.0",
    "fsspec==2025.5.1",
    "glfw==2.9.0",
    "h5py>=3.14.0",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "llvmlite==0.44.0",
    "mink==0.0.11",
    "mujoco==3.3.2",
    "numba==0.61.2",
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "pluggy==1.6.0",
    "pygments==2.19.1",
    "pynput==1.8.1",
    "pyopengl==3.1.9",
    "pytest==8.4.0",
    "python-xlib==0.33",
    "qpsolvers==4.7.1",
    "quadprog==0.1.13",
    "scipy==1.15.3",
    "six==1.17.0",
    "termcolor==3.1.0",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "zipp==3.22.0",
]

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
extend-exclude = "robosuite/((models/assets)|(controllers/config))"

[tool.isort]
profile = "black"
line_length = 120
skip = ["__init__.py"]
filter_files = true
py_version = "all"
extend_skip = [
    "robosuite/models/assets",
    "robosuite/controllers/config",
]
